= Pendiente
 * Agregar los mensajes que faltan

= v00006 =
@ 02/02/2018 - AGALAZ
 * Se agrega BCC dos cuentas

= v00005c =
@ 01/02/2018 - AGALAZ
 * Se corrige a Periodo 0 clase AFacturar

= v00005b =
@ 31/01/2018 - AGALAZ
 * Se deja de utilizar la tabla tInicioTransferencia, porque distorsiona
   la fecha real del último viaje o control file.

= v00005a =
@ 29/01/2017
 * FacturacionAdmin se vuelve a v004e
 
= v00005 =
@ 17/01/2017
 * Se adelanta la fecha cierre inicio y fin en 7 días

= v00004e =
@ 04/01/2017
 * Se deja de mostrar Facturación 'Sin Multa' en CSV

= v00004d =
@ 29/12/2017
 * Se cambia a -3 días 'Administración facturas'

= v00004c =
@ 26/12/2017
 * Se agrega fin de linea en el encabezado y las líneas del CSV
   'Administración facturas'
  
= v00004b =
@ 19/12/2017
 * Se reduce la cantidad columnas del CSV del 
   proceso 'Administración facturas'
  
= v00004a =
@ 14/12/2017
 * Se corrige error sintaxis SQL en FacturaParcial
  
= v00004 =
@ 11/12/2017
 * Facturacion Administrativa
 * Correciones a la SHELL y Crontab
 
= v00003 =
@ 01/12/2017
 * Facturacion Parcial
 
= v00002 =
@ 24/11/2017
 * Se controla bVigente='1' en tVehiculo
 
= v00001 =
@ 11/08/2017
 * Se crea GIT
 * Se agrega mensajes a_facturar_01 y a_facturar_02 con Mandril