@@ -72,7 +72,7 @@ public class CierreFactura {
                     + "               , IFNULL(DATE( w.tUltControl      ), '0000-00-00'))      dSincro \n"
                     + " FROM  wMemoryCierreTransf w \n"
                     + "       JOIN tUsuario u ON u.pUsuario = w.fUsuarioTitular \n"
-                    + " WHERE nDiasAlCierre = ? \n"
+                    + " WHERE nDiasAlCierreAnt = ? \n"
                     + " AND   nDiasNoSincro > 0 \n"
                     + " AND   w.cPoliza is not null \n"
                     + " AND   w.bVigente = '1' \n";
